完成时间格式化

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "got": "^10.2.2",
     "http-status-codes": "^1.4.0",
+    "moment": "^2.24.0",
     "pg": "^7.17.1",
     "typeorm": "^0.2.22"
   },
