--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=192.168.77.151
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME=nscholl
+DB_NAME=weather_school
