--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
     "got": "^10.2.2",
     "http-status-codes": "^1.4.0",
     "moment": "^2.24.0",
     "pg": "^7.17.1",
-    "typeorm": "^0.2.22"
+    "typeorm": "^0.2.22",
+    "weacast-grib2json": "^1.0.2"
   },
   "scripts": {
     "lint": "tslint --project tsconfig.json --format stylish",
@@ -20,6 +22,7 @@
     "start": "nodemon"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
     "@types/http-status-codes": "^1.2.0",
     "@types/node": "^13.1.7",
     "eslint": "^6.8.0",
