--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,22 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es5", "es6"],
+    "lib": [
+      "es5",
+      "es6"
+    ],
     "noImplicitAny": true,
     "outDir": "./dist",
     "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["./src/**/*"]
+  "include": [
+    "./src/**/*"
+  ],
+  "paths": {
+    "@/*": [
+      "src/*"
+    ]
+  },
 }
